# cf

./: .gitignore  CMakeLists.txt  Makefile  README.md  cli.cpp  cli.hpp  clipboard.cpp  file_collector.cpp  file_collector.hpp  file_ignore_list.cpp  main.cpp  makefile  ui.cpp  ui.hpp  utils.cpp
include/cf/: cli.hpp  clipboard.hpp  file_collector.hpp  file_ignore_list.hpp  utils.hpp
src/: cli.cpp  clipboard.cpp  file_collector.cpp  file_ignore_list.cpp  main.cpp  ui.cpp
